<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <variable
        name="userinfo"
        type="sion.my.jinxiu.bean.SelectUserBean.BeanBean" />
</data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
       >
        <com.hjq.bar.TitleBar
            android:layout_width="match_parent"
            app:backButton="false"
            app:title="@string/personal_data_title"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"/>




        <FrameLayout

            android:id="@+id/fl_person_data_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/personal_data_head"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_person_data_avatar"
                xmlns:circleimageview="http://schemas.android.com/apk/res-auto"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="right"
                android:glide_url_circle="@{userinfo.imghead}"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                circleimageview:civ_border_overlay="false"
                circleimageview:civ_border_width="2dp"
                />





        </FrameLayout>

        <com.hjq.widget.layout.SettingBar
            android:id="@+id/sb_person_data_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            app:bar_leftText="@string/personal_data_id"
            android:righttext_bar="@{String.valueOf(userinfo.id)}"
            />

        <com.hjq.widget.layout.SettingBar
            android:id="@+id/sb_person_data_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bar_leftText="@string/personal_data_name"
            app:bar_rightHint="@string/personal_data_name_hint"
            android:righttext_bar="@{userinfo.username}" />

        <com.hjq.widget.layout.SettingBar
            android:id="@+id/sb_person_data_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bar_leftText="@string/personal_data_address"
            app:bar_rightHint="@string/personal_data_address_hint"
            app:bar_rightIcon="@drawable/ico_go_black"
            android:righttext_bar="@{userinfo.position}" />

        <com.hjq.widget.layout.SettingBar
            android:id="@+id/sb_person_data_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:bar_leftText="@string/personal_data_phone"
            android:righttext_bar="@{userinfo.phone}"
            app:bar_rightHint="@string/personal_data_phone_hint"
            app:bar_rightIcon="@drawable/ico_go_black" />

    </LinearLayout>
</layout>