<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="WORD"
            type="sion.my.jinxiu.bean.JinsanTransation" />
        <variable
            name="pnEn"
            type="String" />
        <variable
            name="pnEnMp"
            type="String" />
        <variable
            name="en_search_sentent_adapter"
            type="com.lhw.sion.bean.DataBindingRecyclerAdapter" />

        <variable
            name="en_search_tense_adapter"
            type="com.lhw.sion.bean.DataBindingRecyclerAdapter" />

    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activity.EnSearchActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <com.hjq.bar.TitleBar
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/blue06"
                    android:setTitleText="@{WORD.baesInfo.word_name}"
                    app:leftIcon="@drawable/icon_back"
                    app:titleColor="@color/white"
                    app:titleSize="@dimen/themmargin" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/blue06"

                        android:orientation="horizontal"
                        android:paddingRight="5dp"
                        android:paddingBottom="20dp">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:scaleType="center"
                            android:src="@drawable/icon_null" />
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:orientation="vertical"
                            android:paddingLeft="20dp">



                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:textColor="@color/white"

                                android:translation="@{WORD.baesInfo.symbols}" />

                            <com.lhw.sion.ui.view.CulationLayout
                                android:id="@+id/en_video"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:CulationLayouttext="@{pnEn}"
                                android:CulationLayoutvideo="@{pnEnMp}" />
                        </LinearLayout>




                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"

                        android:orientation="vertical">
                        <LinearLayout

                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:orientation="vertical">
                            <!--                    二级列表-->
                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/en_search_parts"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:adapter="@{en_search_tense_adapter}" />
                        </LinearLayout>

                        <com.hjq.widget.layout.SettingBar

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:bar_left_text="@{WORD.baesInfo.exchange.word_third}"
                            app:bar_leftSize="@dimen/NumberTwo"
                            app:bar_rightText="@string/search_data_word_third" />

                        <com.hjq.widget.layout.SettingBar

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:bar_left_text="@{WORD.baesInfo.exchange.word_past}"
                            app:bar_leftSize="@dimen/NumberTwo"
                            app:bar_rightText="@string/search_data_word_past" />

                        <com.hjq.widget.layout.SettingBar
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"

                            android:bar_left_text="@{WORD.baesInfo.exchange.word_done}"
                            app:bar_leftSize="@dimen/NumberTwo"
                            app:bar_rightText="@string/search_data_word_done" />

                        <com.hjq.widget.layout.SettingBar

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:bar_left_text="@{WORD.baesInfo.exchange.word_ing}"
                            app:bar_leftSize="@dimen/NumberTwo"
                            app:bar_rightText="@string/search_data_word_ing" />
                    </LinearLayout>




                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/black_night"></View>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/en_search_sentence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:adapter="@{en_search_sentent_adapter}" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>




    </LinearLayout>



</layout>